# vibekanban-cli

./: .gitignore  AGENTS.md  Cargo.toml  package.json  pnpm-lock.yaml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: app.rs  cli_args.rs  lib.rs  main.rs  render.rs  resolve.rs  types.rs  utils.rs  watch.rs
crates/cli/src/api/: client.rs  mod.rs
crates/cli/src/ui/: components.rs  mod.rs
crates/cli/src/ui/views/: create_attempt.rs  create_task.rs  help.rs  mod.rs  projects.rs  tasks.rs  workspace_detail.rs  workspaces.rs
crates/db/.sqlx/: query-021fe5fdf0bfbc6a5961b1076c0fbd5f1f6449184a638b9c20f59d94ff1c8059.json  query-0399924893d3b344fb13b98be4d408ce1c92a458a4820fc764ea7461b9e1b254.json  query-04155dba9e62a970f94013c28b1155c8f624355d3c8b32199c9162859e25ed75.json  query-0764c224d4a3b2360f807ebfc621a439769d5b1d218d19bf41067842f1a5754d.json  query-078cd7044273bdd6d86947f373f4f8e446c644d393cf0d766928243f1d646236.json  query-09243152d1fda03d170ab8b58ce0831b9f78020f170cc7bb8e71c0eddd9033dd.json  query-0d27e7e2b0d313935551ca5f08d6574e59074673948f63429978c10a302dc51a.json  query-0d992d66e7cefa99ec7e5f1f0dd434bcdc5385e91cf648d841c8a9bcaaeb9508.json  query-0ea5f3329062a1cb23492722735f8e5dd19bf8317fa4969d42c32ee1bec4062d.json  query-160b96e7b8284d8c2db79787866cee920ce1cde30420507d792e85e51742e66d.json  query-1b3ad16e213178cf6005206f7adf67efe0095b0733ca6b319b4affe332e95629.json  query-1cc08d4650d6fc3b93df47f9ca17f61576823593e4369f68ce86d992ebd76501.json  query-1cd6168d8eea8a41ddf5fdd107fdd35fd01ec466b97deb360693fb946873e8dc.json  query-1cfc47291ad886bb4efefd329da69a3feb181e00118613a3f73f60328aca78e5.json  query-1d2491b93f6cc042763b799c001d08fe94cbe2ff325acbe16210d5de4c23458a.json  query-22d00be472499f688119246f75c1954f389bf7115bffaf7202f101f6eb2cee59.json  query-232f255bd0bdf084993db10e842b9d0f97301d39a2d9660df2c24c43d15c513f.json  query-2619d53206f8fa8bffa561661991c7ad706905358d3154dba7fda48df26209e4.json  query-2677d7fffd1770e663f6d3a992863c664058123bdf6fc848a7d8c2384e655391.json  query-283bf5e62c280fea879bcca65612c8669cb4c59f7b15dcb64413af527054b761.json  query-29fb698df0e73e60d43adedcfee740de86518613fa729345176aa56be9814c44.json  query-2ad1cd981548981d17987ff3de0cce9deede81b966d7919737d357e35d39befd.json  query-2ae8f03cff44ad9c3c68097767e06b26dab16d598db27ae843a2d3cd8072668c.json  query-2bfd2f95681f6f857eedc39c6ee538ce7e61af6bd61488c7e9c7c7935cf9343b.json  query-2e4ac28f05ea7a5b8f41981862894a998034cd4ddb0ae2fa563a92b3d5bf0787.json  (+73 more)
crates/db/migrations/: 20260122100000_create_agent_skills.sql  (+7 more)
docs/: agent-swarm-design.md  agent-team-design.md
frontend/: package.json
shared/: types.ts
(+51 files in other folders)
