[package]
name = "vibe-kanban-cli"
version = "0.1.4"
edition = "2024"
description = "Interactive CLI for Vibe Kanban"
authors = ["Vibe Kanban Team"]
license = "MIT"
repository = "https://github.com/chasebuild/vibekanban-cli"
homepage = "https://github.com/chasebuild/vibekanban-cli"
readme = "README.md"

[dependencies]
# Async runtime
tokio = { workspace = true }

# HTTP client for API communication
reqwest = { workspace = true, features = ["json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Terminal rendering (non-curses)
crossterm = "0.28"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# UUID handling
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Async streams
futures-util = "0.3"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

# URL handling
url = "2.5"

# TLS crypto provider (required for reqwest with rustls)
rustls = { workspace = true }

# JSON patch handling for streaming updates
json-patch = "2.0"

# Slug matching for task titles
regex = "1.11.1"

[lints.clippy]
uninlined-format-args = "allow"
